Change data source

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,7 +10,7 @@
 <div class="container" data-th-object="${velorenStatus}">
     <h1>Endcube</h1>
     <p>Join our Veloren community server at <strong>veloren.endcube.net</strong> today.</p>
-    <p>There are [[*{clientsConnected - clientsDisconnected}]] player(s) online.</p>
+    <p>There's [[*{participantsConnected - participantsDisconnected}]] player(s) online.</p>
 </div>
 </body>
 </html>
