Add server build info

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,8 +9,13 @@
 <body>
 <div class="container" data-th-object="${velorenStatus}">
     <h1>Endcube</h1>
-    <p>Join our Veloren community server at <strong>veloren.endcube.net</strong> today.</p>
-    <p>There's [[*{participantsConnected - participantsDisconnected}]] player(s) online.</p>
+    <p>
+        Join our Veloren community server at <strong>veloren.endcube.net</strong> today.
+    </p>
+    <p>
+        There's [[*{participantsConnected - participantsDisconnected}]] player(s) online.
+        Server running on build [[*{velorenBuildInfo}]].
+    </p>
 </div>
 </body>
 </html>
