--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,20 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Endcube - Service Status</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <title>Endcube</title>
 </head>
 <body>
-<div class="container" data-th-object="${velorenStatus}">
+<div class="container">
     <h1>Endcube</h1>
-    <p>
-        Join our Veloren community server at <strong>veloren.endcube.net</strong> today.
-    </p>
-    <p>
-        There's [[*{participantsConnected - participantsDisconnected}]] player(s) online.
-        Server running on build [[*{velorenBuildInfo}]].
-    </p>
+    <h2>Service Status</h2>
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenStatus}">
+                    <div>
+                        <h5>veloren.endcube.net</h5>
+                        <p>
+                            [[*{participantsConnected - participantsDisconnected}]] in-game player(s)
+                        </p>
+                        <small><span class="font-monospace" data-th-text="*{velorenBuildInfo}"></span></small>
+                    </div>
+                    <span data-th-if="*{online == true}" class="badge bg-success rounded-pill">Online</span>
+                    <span data-th-if="*{online == false}" class="badge bg-danger rounded-pill">Offline</span>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <p>Join our <a href="https://go.endcube.net/discord" target="_blank">Discord server</a> for the latest news and updates.</p>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </div>
 </body>
 </html>
