--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,23 +10,37 @@
 <div class="container">
     <h1>Endcube</h1>
     <h2>Service Status</h2>
-    <div class="row">
-        <div class="col-md-6 mb-3">
+    <div>
+        <div class="mb-3">
             <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenStatus}">
+                <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenGameServer}">
                     <div>
-                        <h5>veloren.endcube.net</h5>
+                        <h5>Veloren Game Server</h5>
                         <p>
-                            [[*{participantsConnected - participantsDisconnected}]] in-game player(s)
+                            Game server (veloren.endcube.net) managed by Endcube.
                         </p>
-                        <small><span class="font-monospace" data-th-text="*{velorenBuildInfo}"></span></small>
+                        <small>
+                            <span class="font-monospace" data-th-text="*{buildInfo}"></span>
+                            [[*{participantsConnected - participantsDisconnected}]] in-game player(s)
+                        </small>
                     </div>
-                    <span data-th-if="*{online == true}" class="badge bg-success rounded-pill">Online</span>
-                    <span data-th-if="*{online == false}" class="badge bg-danger rounded-pill">Offline</span>
+                    <span data-th-if="*{isOnline == true}" class="badge bg-success rounded-pill">Online</span>
+                    <span data-th-if="*{isOnline == false}" class="badge bg-danger rounded-pill">Offline</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenAuthServer}">
+                    <div>
+                        <h5>Veloren Auth Server</h5>
+                        <p>
+                            Auth server maintained by the official Veloren team.
+                        </p>
+                        <small><span class="font-monospace">Weekly</span></small>
+                    </div>
+                    <span data-th-if="*{isOnline == true}" class="badge bg-success rounded-pill">Online</span>
+                    <span data-th-if="*{isOnline == false}" class="badge bg-danger rounded-pill">Offline</span>
                 </li>
             </ul>
         </div>
-        <div class="col-md-6">
+        <div>
             <p>Join our <a href="https://go.endcube.net/discord" target="_blank">Discord server</a> for the latest news and updates.</p>
         </div>
     </div>
