--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Endcube - Service Status</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link data-th-href="@{/styles.css}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <h1>Endcube</h1>
-    <h2>Service Status</h2>
+    <div class="my-md-5">
+        <h1>Endcube</h1>
+        <h2>Service Status</h2>
+        <p>
+            Near realtime service status updates for Endcube's services.
+        </p>
+    </div>
     <div>
-        <div class="mb-3">
-            <ul class="list-group">
+        <div class="mb-5">
+            <ul class="list-group shadow">
                 <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenGameServer}">
                     <div>
                         <h5>Veloren Game Server</h5>
                         <p>
-                            Game server (veloren.endcube.net) managed by Endcube.
-                            [[*{participantsConnected - participantsDisconnected}]] in-game player(s)
+                            veloren.endcube.net;
+                            Build [[*{buildInfo}]];
+                            [[*{participantsConnected - participantsDisconnected}]] in-game players
                         </p>
                         <small class="text-muted">
                             Updated at [[*{timeStamp}]]
@@ -31,7 +41,7 @@
                     <div>
                         <h5>Veloren Auth Server</h5>
                         <p>
-                            Auth server maintained by the official Veloren team.
+                            auth.veloren.net
                         </p>
                         <small class="text-muted">
                             Updated at [[*{timeStamp}]]
@@ -46,7 +56,6 @@
             <p>Join our <a href="https://go.endcube.net/discord" target="_blank">Discord server</a> for the latest news and updates.</p>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </div>
 </body>
 </html>
