--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="my-md-5">
+    <div class="mb-3 my-md-5">
         <h1>Endcube</h1>
         <h2>Service Status</h2>
         <p>
@@ -20,7 +20,7 @@
         </p>
     </div>
     <div>
-        <div class="mb-5">
+        <div class="mb-3 mb-md-5">
             <ul class="list-group shadow">
                 <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenGameServer}">
                     <div>
