--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,47 +8,60 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link data-th-href="@{/styles.css}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <div class="mb-3 my-md-5">
+    <div class="my-3 my-md-5">
         <h1>Endcube</h1>
         <h2>Service Status</h2>
         <p>
-            Near realtime service status updates for Endcube's services.
+            Live service status updates for Endcube's services.
         </p>
+        <div data-th-if="${unavailableServices.isEmpty()}" class="alert alert-success d-flex align-items-center" role="alert">
+            <i class="bi flex-shrink-0 me-2 bi-check-circle-fill text-success"></i>
+            <div>
+                All services are operational.
+            </div>
+        </div>
+        <div data-th-unless="${unavailableServices.isEmpty()}" class="alert alert-danger d-flex align-items-center" role="alert">
+            <i class="bi flex-shrink-0 me-2 bi-x-circle-fill text-danger"></i>
+            <div>
+                <span data-th-each="unavailableService, i: ${unavailableServices}">
+                    [[${!i.last} ? ${unavailableService + ','} : ${unavailableService}]]
+                </span>
+                [[${unavailableServices.size() > 1} ? 'are' : 'is']] not operational.
+            </div>
+        </div>
     </div>
     <div>
         <div class="mb-3 mb-md-5">
             <ul class="list-group shadow">
                 <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenGameServer}">
                     <div>
-                        <h5>Veloren Game Server</h5>
-                        <p>
-                            veloren.endcube.net;
-                            Build [[*{buildInfo}]];
-                            [[*{participantsConnected - participantsDisconnected}]] in-game players
-                        </p>
+                        <h5 data-th-text="*{name}"></h5>
                         <small class="text-muted">
                             Updated at [[*{timeStamp}]]
                         </small>
                     </div>
-                    <span data-th-if="*{isOnline == true}" class="badge bg-success rounded-pill">Online</span>
-                    <span data-th-if="*{isOnline == false}" class="badge bg-danger rounded-pill">Offline</span>
+                    <div>
+                        <small data-th-if="*{isOnline == true}" data-th-text="*{buildInfo}" class="font-monospace"></small>
+                        <i data-th-if="*{isOnline}" class="bi bi-check-circle-fill text-success"></i>
+                        <i data-th-unless="*{isOnline}" class="bi bi-x-circle-fill text-danger"></i>
+                    </div>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center" data-th-object="${velorenAuthServer}">
                     <div>
-                        <h5>Veloren Auth Server</h5>
-                        <p>
-                            auth.veloren.net
-                        </p>
+                        <h5 data-th-text="*{name}"></h5>
                         <small class="text-muted">
                             Updated at [[*{timeStamp}]]
                         </small>
                     </div>
-                    <span data-th-if="*{isOnline == true}" class="badge bg-success rounded-pill">Online</span>
-                    <span data-th-if="*{isOnline == false}" class="badge bg-danger rounded-pill">Offline</span>
+                    <div>
+                        <i data-th-if="*{isOnline}" class="bi bi-check-circle-fill text-success"></i>
+                        <i data-th-unless="*{isOnline}" class="bi bi-x-circle-fill text-danger"></i>
+                    </div>
                 </li>
             </ul>
         </div>
