--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,7 +17,7 @@
         <h1>Endcube</h1>
         <h2>Service Status</h2>
         <p>
-            Live service status updates for Endcube's services.
+            Live status updates for Endcube's services.
         </p>
     </div>
     <div>
