Remove build info

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -46,7 +46,7 @@
                         </small>
                     </div>
                     <div>
-                        <small data-th-if="*{isOnline == true}" data-th-text="*{buildInfo}" class="font-monospace"></small>
+<!--                        <small data-th-if="*{isOnline == true}" data-th-text="*{buildInfo}" class="font-monospace"></small>-->
                         <i data-th-if="*{isOnline}" class="bi bi-check-circle-fill text-success"></i>
                         <i data-th-unless="*{isOnline}" class="bi bi-x-circle-fill text-danger"></i>
                     </div>
