--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link data-th-href="@{/styles.css}" rel="stylesheet">
+    <link data-th-href="@{/css/styles.css}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -42,7 +42,7 @@
                     <div>
                         <h5 data-th-text="*{name}"></h5>
                         <small class="text-muted">
-                            Updated at [[*{timeStamp}]]
+                            Updated at <span data-th-text="*{timeStamp}" class="serviceTimeStamp"></span>
                         </small>
                     </div>
                     <div>
@@ -55,7 +55,7 @@
                     <div>
                         <h5 data-th-text="*{name}"></h5>
                         <small class="text-muted">
-                            Updated at [[*{timeStamp}]]
+                            Updated at <span data-th-text="*{timeStamp}" class="serviceTimeStamp"></span>
                         </small>
                     </div>
                     <div>
@@ -70,5 +70,12 @@
         </div>
     </div>
 </div>
+<script data-th-src="@{/js/moment.min.js}"></script>
+<script>
+    let sts = document.getElementsByClassName("serviceTimeStamp");
+    for (let i = 0; i < sts.length; i++) {
+        sts[i].innerHTML = moment.unix(sts[i].innerHTML).format("LLL");
+    }
+</script>
 </body>
 </html>
